force-app/main/default/objects/ABFL_Case_Detail__c/ABFL_Case_Detail__c.object-meta.xml
<CustomObject>
    <label>ABFL Case Detail</label>
    <nameField>
        <displayFormat>ABFL-{0000000}</displayFormat>
        <label>ABFL Case Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABFL Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>