force-app/main/default/objects/ABFL_Case_Detail__c/fields/ABCCustomerTAT__c.field-meta.xml
<CustomField>
    <fullName>ABCCustomerTAT__c</fullName>
    <description>One ABC Customer TAT</description>
    <label>ABCCustomerTAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>