force-app/main/default/objects/ABFL_Case_Detail__c/fields/ABCOwner__c.field-meta.xml
<CustomField>
    <fullName>ABCOwner__c</fullName>
    <description>One ABC Case Owner</description>
    <label>ABCOwner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>