force-app/main/default/objects/ABFL_Case_Detail__c/fields/Ageing_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Assigned_Date__c</fullName>
    <description>This field will be used in report to get aging for assigned owner</description>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE( Case__r.Last_Owner_Change_Date__c ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE( Case__r.Last_Owner_Change_Date__c ) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing Assigned Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>