force-app/main/default/objects/ABFL_Case_Detail__c/fields/Approver_s_Decision__c.field-meta.xml
<CustomField>
    <fullName>Approver_s_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved?</label>
    <type>Checkbox</type>
</CustomField>