force-app/main/default/objects/ABFL_Case_Detail__c/fields/Autoclosed__c.field-meta.xml
<CustomField>
    <fullName>Autoclosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in flow, to check if the cases are autoclosed after 24 hrs</description>
    <label>Autoclosed</label>
    <type>Checkbox</type>
</CustomField>