force-app/main/default/objects/ABFL_Case_Detail__c/fields/Autoclosure_IN_RR__c.field-meta.xml
<CustomField>
    <fullName>Autoclosure_IN_RR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trail Mail Flag of the Email</description>
    <label>Trail Mail</label>
    <type>Checkbox</type>
</CustomField>