force-app/main/default/objects/ABFL_Case_Detail__c/fields/Beneficiary_Details__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Details__c</fullName>
    <label>Beneficiary Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>