force-app/main/default/objects/ABFL_Case_Detail__c/fields/BOT_Response__c.field-meta.xml
<CustomField>
    <fullName>BOT_Response__c</fullName>
    <label>BOT Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No response to BOT</fullName>
            </value>
            <value>
                <fullName>Invalid contact number</fullName>
            </value>
            <value>
                <fullName>Customer did not understand</fullName>
            </value>
            <value>
                <fullName>Customer confirmed no change</fullName>
            </value>
            <value>
                <fullName>Customer acknowledged there is change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>