force-app/main/default/objects/ABFL_Case_Detail__c/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call connected- Customer satisfied</fullName>
            </value>
            <value>
                <fullName>Call connected- Customer not satisfied</fullName>
            </value>
            <value>
                <fullName>Call not connected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>