force-app/main/default/objects/ABFL_Case_Detail__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Not Connected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>