force-app/main/default/objects/ABFL_Case_Detail__c/fields/CallbackDate__c.field-meta.xml
<CustomField>
    <fullName>CallbackDate__c</fullName>
    <description>Mandatory for Issue Type Code hfl079. This holds Date value</description>
    <label>CallbackDate</label>
    <type>Date</type>
</CustomField>