force-app/main/default/objects/ABFL_Case_Detail__c/fields/CallBackTimeSlot__c.field-meta.xml
<CustomField>
    <fullName>CallBackTimeSlot__c</fullName>
    <description>Mandatory for Issue Type Code hfl079. This holds Time value</description>
    <label>CallBackTimeSlot</label>
    <type>Time</type>
</CustomField>