force-app/main/default/objects/ABFL_Case_Detail__c/fields/Caller_Type__c.field-meta.xml
<CustomField>
    <fullName>Caller_Type__c</fullName>
    <label>Caller Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Broker On behalf of Investor</fullName>
            </value>
            <value>
                <fullName>Relationship Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>