force-app/main/default/objects/ABFL_Case_Detail__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High ROI</fullName>
            </value>
            <value>
                <fullName>Misselling</fullName>
            </value>
            <value>
                <fullName>Better offer by other Banks</fullName>
            </value>
            <value>
                <fullName>Less Value Offered</fullName>
            </value>
            <value>
                <fullName>Delay in Disbursement</fullName>
            </value>
            <value>
                <fullName>Wrong Product Features</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>