force-app/main/default/objects/ABFL_Case_Detail__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ABFL Case Details</relationshipLabel>
    <relationshipName>ABFL_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField>