force-app/main/default/objects/ABFL_Case_Detail__c/fields/Case_Categorisation__c.field-meta.xml
<CustomField>
    <fullName>Case_Categorisation__c</fullName>
    <label>Case Categorisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect</fullName>
            </value>
            <value>
                <fullName>Correct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>