force-app/main/default/objects/ABFL_Case_Detail__c/fields/Case_Details__c.field-meta.xml
<CustomField>
    <fullName>Case_Details__c</fullName>
    <label>Case Details</label>
    <type>TextArea</type>
</CustomField>