force-app/main/default/objects/ABFL_Case_Detail__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <description>This field is used to store related case number</description>
    <label>Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>