force-app/main/default/objects/ABFL_Case_Detail__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bounce</fullName>
            </value>
            <value>
                <fullName>Late Payment</fullName>
            </value>
            <value>
                <fullName>Processing Fees</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Other overdue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>