force-app/main/default/objects/ABFL_Case_Detail__c/fields/Closure_Time__c.field-meta.xml
<CustomField>
    <fullName>Closure_Time__c</fullName>
    <label>Closure Time</label>
    <type>DateTime</type>
</CustomField>