force-app/main/default/objects/ABFL_Case_Detail__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIBIL</fullName>
            </value>
            <value>
                <fullName>Legal Notice</fullName>
            </value>
            <value>
                <fullName>Consumer Forum/Court</fullName>
            </value>
            <value>
                <fullName>CXO</fullName>
            </value>
            <value>
                <fullName>Senior Management</fullName>
            </value>
            <value>
                <fullName>Compliance Officer</fullName>
            </value>
            <value>
                <fullName>NHB</fullName>
            </value>
            <value>
                <fullName>RBI</fullName>
            </value>
            <value>
                <fullName>Consumer Affair</fullName>
            </value>
            <value>
                <fullName>PMO/CXO</fullName>
            </value>
            <value>
                <fullName>Grievance Redressal</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Group CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>