force-app/main/default/objects/ABFL_Case_Detail__c/fields/ConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceScore__c</fullName>
    <label>Confidence Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>