force-app/main/default/objects/ABFL_Case_Detail__c/fields/Correct_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Correct_Call_Type__c</fullName>
    <label>Correct Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>