force-app/main/default/objects/ABFL_Case_Detail__c/fields/Correct_Category__c.field-meta.xml
<CustomField>
    <fullName>Correct_Category__c</fullName>
    <label>Correct Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>