force-app/main/default/objects/ABFL_Case_Detail__c/fields/Correct_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Correct_Sub_Type__c</fullName>
    <label>Correct Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>