force-app/main/default/objects/ABFL_Case_Detail__c/fields/CPV_Outcome__c.field-meta.xml
<CustomField>
    <fullName>CPV_Outcome__c</fullName>
    <label>CPV Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>