force-app/main/default/objects/ABFL_Case_Detail__c/fields/Credit_Team_Description__c.field-meta.xml
<CustomField>
    <fullName>Credit_Team_Description__c</fullName>
    <label>Credit Team Description</label>
    <type>TextArea</type>
</CustomField>