force-app/main/default/objects/ABFL_Case_Detail__c/fields/Customer_claim_status__c.field-meta.xml
<CustomField>
    <fullName>Customer_claim_status__c</fullName>
    <label>Customer claim status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completely rejected</fullName>
            </value>
            <value>
                <fullName>Partially rejected</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>