force-app/main/default/objects/ABFL_Case_Detail__c/fields/Customer_demand_VOC__c.field-meta.xml
<CustomField>
    <fullName>Customer_demand_VOC__c</fullName>
    <label>Customer demand/ VOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>