force-app/main/default/objects/ABFL_Case_Detail__c/fields/Customer_Verified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Verified ?</label>
    <type>Checkbox</type>
</CustomField>