force-app/main/default/objects/ABFL_Case_Detail__c/fields/Date_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Transaction__c</fullName>
    <label>Date of Transaction</label>
    <type>Date</type>
</CustomField>