force-app/main/default/objects/ABFL_Case_Detail__c/fields/Debit_Type__c.field-meta.xml
<CustomField>
    <fullName>Debit_Type__c</fullName>
    <label>Debit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MAXAMOUNT</fullName>
                <default>true</default>
                <label>MAXAMOUNT</label>
            </value>
            <value>
                <fullName>FIXED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>