force-app/main/default/objects/ABFL_Case_Detail__c/fields/Demographic_Type__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Type__c</fullName>
    <label>Demographic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Update</fullName>
            </value>
            <value>
                <fullName>Contact Update</fullName>
            </value>
            <value>
                <fullName>Email Update</fullName>
            </value>
            <value>
                <fullName>Name Update</fullName>
            </value>
            <value>
                <fullName>PAN Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>