force-app/main/default/objects/ABFL_Case_Detail__c/fields/Department_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Department_Dependency__c</fullName>
    <label>Department Dependency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optimum</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
            </value>
            <value>
                <fullName>Registrar and Transfer Agent(RTA)</fullName>
            </value>
            <value>
                <fullName>Asset Management company (AMC) / Manufacturer</fullName>
            </value>
            <value>
                <fullName>NSE</fullName>
            </value>
            <value>
                <fullName>MMTC</fullName>
            </value>
            <value>
                <fullName>Product Team</fullName>
            </value>
            <value>
                <fullName>Business Team</fullName>
            </value>
            <value>
                <fullName>Taxation Team</fullName>
            </value>
            <value>
                <fullName>CPU NACH Team</fullName>
            </value>
            <value>
                <fullName>Policy Team</fullName>
            </value>
            <value>
                <fullName>CAD Team</fullName>
            </value>
            <value>
                <fullName>IT Team</fullName>
            </value>
            <value>
                <fullName>Operation Team</fullName>
            </value>
            <value>
                <fullName>Legal Team</fullName>
            </value>
            <value>
                <fullName>Customer Service Team</fullName>
            </value>
            <value>
                <fullName>Collection Team</fullName>
            </value>
            <value>
                <fullName>Customer pendency</fullName>
            </value>
            <value>
                <fullName>TDS Ops Team</fullName>
            </value>
            <value>
                <fullName>Disbursement Ops team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>