force-app/main/default/objects/ABFL_Case_Detail__c/fields/Department_To__c.field-meta.xml
<CustomField>
    <fullName>Department_To__c</fullName>
    <label>Department To</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Retention_Process_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOPS</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>BIU</fullName>
            </value>
            <value>
                <fullName>Taxation</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>