force-app/main/default/objects/ABFL_Case_Detail__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <description>This field will be provided by WhatsApp using Ebot.</description>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Account deactivation</fullName>
            </value>
            <value>
                <fullName>Account status</fullName>
            </value>
            <value>
                <fullName>Payment link request</fullName>
            </value>
            <value>
                <fullName>Charges related</fullName>
            </value>
            <value>
                <fullName>Payment related</fullName>
            </value>
            <value>
                <fullName>Bureau related</fullName>
            </value>
            <value>
                <fullName>Waiver/ Refund requests</fullName>
            </value>
            <value>
                <fullName>Limit related</fullName>
            </value>
            <value>
                <fullName>NOC request</fullName>
            </value>
            <value>
                <fullName>Demographic related</fullName>
            </value>
            <value>
                <fullName>Technical issues on APP</fullName>
            </value>
            <value>
                <fullName>Collection related</fullName>
            </value>
            <value>
                <fullName>Fraud related</fullName>
            </value>
            <value>
                <fullName>Limit enhanced- unable to use</fullName>
            </value>
            <value>
                <fullName>Payment made- not reflecting in App</fullName>
            </value>
            <value>
                <fullName>Unable to transact</fullName>
            </value>
            <value>
                <fullName>Statement of Account Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>