force-app/main/default/objects/ABFL_Case_Detail__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Statement of Account</fullName>
            </value>
            <value>
                <fullName>Amortization / Repayment Schedule</fullName>
            </value>
            <value>
                <fullName>Welcome Letter</fullName>
            </value>
            <value>
                <fullName>Interest Certificate</fullName>
            </value>
            <value>
                <fullName>Provisional Interest Certificate</fullName>
            </value>
            <value>
                <fullName>Balance Confirmation Letter</fullName>
            </value>
            <value>
                <fullName>Sanction Letter</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>Insurance Copy</fullName>
            </value>
            <value>
                <fullName>GST Tax Invoice</fullName>
            </value>
            <value>
                <fullName>Processing fee debit note</fullName>
            </value>
            <value>
                <fullName>List of Documents/Post disbursal docs</fullName>
            </value>
            <value>
                <fullName>Collateral Documents/Property Papers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>