force-app/main/default/objects/ABFL_Case_Detail__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <description>This value will be populated from STP Flow</description>
    <label>Document URL</label>
    <type>Url</type>
</CustomField>