force-app/main/default/objects/ABFL_Case_Detail__c/fields/Ebot_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Ebot_Feedback__c</fullName>
    <label>Ebot Feedback</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Categorization</fullName>
            </value>
            <value>
                <fullName>Incorrect Moddstamp</fullName>
            </value>
            <value>
                <fullName>Incorrect Intent</fullName>
            </value>
            <value>
                <fullName>Incorrect Email Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>