force-app/main/default/objects/ABFL_Case_Detail__c/fields/Efforts_By__c.field-meta.xml
<CustomField>
    <fullName>Efforts_By__c</fullName>
    <label>Efforts By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIU</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>