force-app/main/default/objects/ABFL_Case_Detail__c/fields/Emi_Amount__c.field-meta.xml
<CustomField>
    <fullName>Emi_Amount__c</fullName>
    <label>Emi Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>