force-app/main/default/objects/ABFL_Case_Detail__c/fields/Final_Decision__c.field-meta.xml
<CustomField>
    <fullName>Final_Decision__c</fullName>
    <label>Final Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IO decision is Uphold</fullName>
            </value>
            <value>
                <fullName>IO decision is Over-ruled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>