force-app/main/default/objects/ABFL_Case_Detail__c/fields/Fraud_Type__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Type__c</fullName>
    <label>Fraud Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspected Fraud</fullName>
            </value>
            <value>
                <fullName>Alleged Fraud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>