force-app/main/default/objects/ABFL_Case_Detail__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Semi Annual</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yearly</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Variable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>