force-app/main/default/objects/ABFL_Case_Detail__c/fields/Gap_People__c.field-meta.xml
<CustomField>
    <fullName>Gap_People__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gap- People</label>
    <type>Checkbox</type>
</CustomField>