force-app/main/default/objects/ABFL_Case_Detail__c/fields/Gap_Process__c.field-meta.xml
<CustomField>
    <fullName>Gap_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gap- Process</label>
    <type>Checkbox</type>
</CustomField>